test/library/standard/Math/bradc/lg2neg.good
lg2neg.chpl:2: error: halt reached - Can't take the log() of a non-positive integer
