test/library/standard/Math/bradc/lg2neg.chpl
writeln("log2(-1) is: ", log2(-1));
